mobile tweaks: z-index issues

--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -134,7 +134,7 @@ ol.carousel-indicators {
   justify-content: center;
   padding: 0;
   margin: 0;
-  z-index: 999;
+  z-index: 13;
 
   li {
     list-style-type: none;
@@ -198,7 +198,7 @@ ul.flex-direction-nav {
   width: 92%;
   display: flex;
   justify-content: space-between;
-  z-index: 998;
+  z-index: 13;
 
   li a {
     position: relative;
