--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -410,7 +410,7 @@ body.is-active {
     position: absolute;
     right: 0.5rem;
     top: 1.5rem;
-    z-index: 10;
+    z-index: 20;
 
     &:focus {
       outline: none;
